--- a/style.css
+++ b/style.css
@@ -170,8 +170,8 @@ body {
 
 .if_yes {
     position: absolute;
-    top: 35%;
-    left: 35%;
+    top: 21%;
+    left: 30%;
     text-align: center;
     border: solid 5px #FC3A6D;
     padding: 90px 90px;
@@ -186,7 +186,9 @@ body {
     display: none;
     
 }
-
+ .imgg {
+    max-width: 300px;
+}
 
 .if_else {
     position: absolute;
